# personalsite-server

./: .gitignore  README.md  manage.sh  manage.sh.backup
infra/: .env  README.md  ports.env  ports.yml
infra/pi-hole/: compose.yaml
infra/portainer/: docker-compose.yml
infra/privacy-policy/: Dockerfile  README.md  compose.yaml  main.go
infra/privacy-policy/policies/: index.html  index.md  wedding-photos.html  wedding-photos.md  whatsapp-assistant-en.md  whatsapp-assistant.html  whatsapp-assistant.md
infra/privacy-policy/src/: go.mod  main.go
infra/traefik/: certificates.yml  docker-compose.yml  traefik.yml  traefik_dynamic.yml
infra/update-ddns/: .env.sample  .gitignore  README.md  pyproject.toml
infra/update-ddns/src/: get-external-ip.sh  manage-get-external-ip-cron.sh  update-ddns.sh
infra/update-ddns/src/lib/: common.sh
infra/update-ddns/src/update_ddns/: __init__.py  main.py
infra/wg-easy/: compose.yaml  generate_password_hash.sh  post-start.sh
scripts/: README.md
scripts/commands/: build.sh  clean.sh  help.sh  init.sh  logs.sh  ps.sh  rebuild.sh  restart.sh  services.sh  start.sh  status.sh  stop.sh
scripts/commands/bootstrap/: README.md  bootstrap.sh
scripts/commands/bootstrap/templates/: README.md.template  docker-compose.yml.template
scripts/commands/bootstrap/templates/be/: app.py.template
scripts/commands/bootstrap/templates/fe/: Dockerfile.template  index.html.template
scripts/lib/: discovery.sh  helpers.sh  service-utils.sh
