[project]
name = "update-ddns"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Danilo Catone", email = "danilocatone@gmail.com" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
update-ddns = "update_ddns:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
