[project]
name = "update-ddns"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Danilo Catone", email = "danilocatone@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "dotenv>=0.9.9",
    "requests>=2.34.2",
]

[project.scripts]
update-ddns = "update_ddns:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.15.18",
]
